# libutf

./: Android.mk  BUILD.gn  utflen.c  utfrrune.c  utfrune.c
