# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all") {
  deps = [
    ":libutf",
  ]
}

static_library("libutf") {
  sources = [
    "rune.c",
    "runestrcat.c",
    "runestrchr.c",
    "runestrcmp.c",
    "runestrcpy.c",
    "runestrdup.c",
    "runestrecpy.c",
    "runestrlen.c",
    "runestrncat.c",
    "runestrncmp.c",
    "runestrncpy.c",
    "runestrrchr.c",
    "runestrstr.c",
    "runetype.c",
    "utfecpy.c",
    "utflen.c",
    "utfnlen.c",
    "utfrrune.c",
    "utfrune.c",
    "utfutf.c",
  ]

  # Make the library into a standalone one.
  configs += [
    "//common-mk:nouse_thin_archive"
  ]
  configs -= [ "//common-mk:use_thin_archive" ]
}
